<resources>
    <string name="app_name">ExSpendables</string>
    <string name="infoFirstTimeUserMsg">First time user, please set PIN</string>
    <string name="setPin">Set PIN</string>
    <string name="retypePin">Confirm PIN</string>
    <string name="savePin">Set PIN</string>
    <string name="income">Enter Income</string>
    <string name="expense">Enter Expense</string>
    <string name="view_summary">View Summary</string>
    <string name="select_category">Select a category</string>
    <string name="select_date">Select a date</string>
    <string name="enteramount">Enter amount</string>
    <string name="select_paymeth">Select a payment method</string>
    <string name="noselection">No Selection</string>
    <string name="cash">Cash</string>
    <string name="d_card">Debit Card</string>
    <string name="c_card">Credit Card</string>
    <string name="remarks">Remarks</string>
    <string name="Submit">Submit</string>
    <string name="promptsetpin">Enter PIN</string>
    <string name="login">Login</string>
    <string name="modifyPin">Change PIN</string>
    <string name="currency">Set Currency</string>
    <string name="edit_categories">Edit Categories</string>
    <string name="view_settings">Settings</string>
    <string name="Delete">Delete</string>
    <string name="Add">Add</string>
    <string name="Modify">Modify</string>
    <string name="add_cat_msg">Add new category</string>
    <string name="modify_cat_msg">Modify Category</string>
    <string name="ok">OK</string>
    <string-array name="paymentselect">
        <item>@string/noselection</item>
        <item>@string/cash</item>
        <item>@string/d_card</item>
        <item>@string/c_card</item>
    </string-array>
</resources>
