<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="fill_parent">

        <ListView
            android:id="@+id/categorylist"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/deleteCategoryBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/Delete" />

        <Button
            android:id="@+id/modifyCategoryBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text= "@string/Modify" />

        <Button
            android:id="@+id/addCategoryBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/Add" />

        <Button
            android:id="@+id/backToSettings"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="Back"
            android:onClick="backToSettings"/>

    </LinearLayout>
</ScrollView>
